package com.faetec.projetofinal.entity;

public enum StatusMesa {
    LIVRE,
    OCUPADA
}