package com.faetec.projetofinal.entity;

public enum StatusPedido {
    PENDENTE,
    ATENDIDO,
    CANCELADO
}