package com.faetec.projetofinal.entity;

public enum TiposPrato {
    ENTRADA,
    PRATOPRINCIPAL,
    BEBIDA,
    SOBREMESA
}