package com.faetec.projetofinal.entity;

public enum TurnosTrabalho {
    MANHA,
    TARDE,
    NOITE
}