package com.faetec.projetofinal.view;

public interface FormularioBase {
}
